--- a/BMA/codemagic.yaml
+++ b/BMA/codemagic.yaml
@@ -5,15 +5,12 @@ workflows:
     max_build_duration: 60
     
     environment:
-      flutter: stable
+      flutter: 3.16.0
       java: 11
     
     scripts:
       - name: Get Flutter dependencies
         script: flutter pub get
-          
-      - name: Generate database code
-        script: flutter pub run build_runner build --delete-conflicting-outputs
           
       - name: Build APK
         script: flutter build apk --release
