--- a/BMA/codemagic.yaml
+++ b/BMA/codemagic.yaml
@@ -5,7 +5,7 @@ workflows:
     max_build_duration: 120
     
     environment:
-      flutter: 3.13.0
+      flutter: 3.10.6
       java: 11
     
     scripts:
@@ -13,7 +13,7 @@ workflows:
         script: flutter pub get
           
       - name: Build APK (Release)
-        script: flutter build apk --release -v
+        script: flutter build apk --release
           
     artifacts:
       - build/app/outputs/flutter-apk/app-release.apk
@@ -21,7 +21,7 @@ workflows:
     publishing:
       email:
         recipients:
-          - mrkhushalchaudhari@gmail.com
+          - kalyanibadgujar@gmail.com
         notify:
           success: true
           failure: true
