--- a/BMA/android/settings.gradle
+++ b/BMA/android/settings.gradle
@@ -1,15 +1,14 @@
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+}
+
+plugins {
+    id "com.android.application" version "7.1.2" apply false
+    id "org.jetbrains.kotlin.android" version "1.7.10" apply false
+}
+
 include ':app'
-
-def localPropertiesFile = new File(rootDir, 'local.properties')
-def properties = new Properties()
-
-if (localPropertiesFile.exists()) {
-    properties.load(localPropertiesFile.newDataInputStream())
-}
-
-def flutterSdkPath = properties.getProperty('flutter.sdk')
-if (flutterSdkPath == null) {
-    throw new GradleException("flutter.sdk not defined in local.properties")
-}
-
-apply from: "$flutterSdkPath/packages/flutter_tools/gradle/app_plugin_loader.gradle"
