--- a/BMA/android/settings.gradle
+++ b/BMA/android/settings.gradle
@@ -9,6 +9,7 @@ pluginManagement {
 plugins {
     id "com.android.application" version "7.1.2" apply false
     id "org.jetbrains.kotlin.android" version "1.7.10" apply false
+    id "dev.flutter.flutter-gradle-plugin" version "1.0.0" apply false
 }
 
 include ':app'
