--- a/BMA/android/settings.gradle
+++ b/BMA/android/settings.gradle
@@ -1,4 +1,17 @@
 pluginManagement {
+    def flutterSdkPath = {
+        def properties = new Properties()
+        def localPropertiesFile = new File(rootDir, 'local.properties')
+        if (localPropertiesFile.exists()) {
+            properties.load(localPropertiesFile.newDataInputStream())
+        }
+        properties.getProperty('flutter.sdk')
+    }()
+
+    if (flutterSdkPath != null) {
+        includeBuild("$flutterSdkPath/packages/flutter_tools/gradle")
+    }
+
     repositories {
         google()
         mavenCentral()
@@ -7,9 +20,7 @@ pluginManagement {
 }
 
 plugins {
-    id "com.android.application" version "7.1.2" apply false
-    id "org.jetbrains.kotlin.android" version "1.7.10" apply false
-    id "dev.flutter.flutter-gradle-plugin" version "1.0.0" apply false
+    id "dev.flutter.flutter-gradle-plugin" apply false
 }
 
 include ':app'
