--- a/BMA/android/settings.gradle
+++ b/BMA/android/settings.gradle
@@ -1,1 +1,5 @@
-include ':app'
+distributionBase=GRADLE_USER_HOME
+distributionPath=wrapper/dists
+zipStoreBase=GRADLE_USER_HOME
+zipStorePath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.5-all.zip
