--- a/BMA/android/gradle.properties
+++ b/BMA/android/gradle.properties
@@ -4,3 +4,7 @@ distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-7.5-all.zip
+# android/gradle.properties
+org.gradle.jvmargs=-Xmx1536M
+android.useAndroidX=true
+android.enableJetifier=true
