--- a/BMA/android/build.gradle
+++ b/BMA/android/build.gradle
@@ -1,15 +1,4 @@
-// PROJECT-LEVEL build.gradle
-
-buildscript {
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.20"
-    }
-}
+// android/build.gradle (project-level)
 
 allprojects {
     repositories {
@@ -18,6 +7,16 @@ allprojects {
     }
 }
 
-task clean(type: Delete) {
+rootProject.buildDir = '../build'
+
+subprojects {
+    project.buildDir = "${rootProject.buildDir}/${project.name}"
+}
+
+subprojects {
+    project.evaluationDependsOn(':app')
+}
+
+tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
