--- a/BMA/android/settings.gradle
+++ b/BMA/android/settings.gradle
@@ -24,9 +24,8 @@ pluginManagement {
 // Declare plugins and AGP/Kotlin versions here.
 // Replace {agpVersion} and {kotlinVersion} if you want other versions.
 plugins {
-    id "dev.flutter.flutter-plugin-loader" version "1.0.0" // loader for Flutter plugin (should be present)
-    id "com.android.application" version "7.4.1" apply false
-    id "org.jetbrains.kotlin.android" version "1.9.0" apply false
+    id "dev.flutter.flutter-plugin-loader" version "1.0.0"
+    id "com.android.application" version "8.1.4" apply false
+    id "org.jetbrains.kotlin.android" version "1.9.22" apply false
 }
-
 include ":app"
