--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,12 +1,13 @@
 workflows:
   android-apk-release:
     name: Android APK Release
-    instance_type: mac_mini_m1
-    max_build_duration: 120
+    max_build_duration: 60
 
     environment:
-      flutter: 3.22.0
-      java: 11
+      flutter: 3.22.3
+      java: 17
+      vars:
+        PROJECT_DIR: "BMA"
 
     cache:
       cache_paths:
@@ -15,32 +16,36 @@ workflows:
         - $HOME/.gradle/wrapper
 
     scripts:
+      - name: Print environment
+        script: |
+          flutter --version
+          dart --version
+          java -version
+          echo "Working directory:"
+          pwd
+          echo "Project dir: $PROJECT_DIR"
+          ls -la
+
       - name: Install dependencies
         script: |
-          cd BMA
+          cd $PROJECT_DIR
           flutter pub get
 
-      # Ensure Gradle wrapper exists (some repos miss it). This step creates wrapper scripts + jar.
-      # If Codemagic image already has Gradle, this will work.
-      - name: Generate Gradle wrapper (Gradle 7.5)
+      - name: Run code generation (build_runner)
         script: |
-          cd BMA/android
-          gradle wrapper --gradle-version 7.5 --distribution-type all || true
-          ls -la gradle/wrapper || true
+          cd $PROJECT_DIR
+          flutter pub run build_runner build --delete-conflicting-outputs
 
       - name: Build APK (Release)
         script: |
-          cd BMA
+          cd $PROJECT_DIR
           flutter build apk --release
 
     artifacts:
       - BMA/build/app/outputs/flutter-apk/app-release.apk
-      - BMA/build/app/outputs/mapping/release/mapping.txt
+      - BMA/build/**/outputs/**/mapping.txt
 
     publishing:
       email:
         recipients:
-          - mrkhushalchaudhari@gmail.com
-        notify:
-          success: true
-          failure: true
+          - khushalc@fynd-external.com
